
export enum MessageColor {
    WHITE = "white",
    GREEN = "green",
    RED = "red",
}

export enum MessageWeight {
    NORMAL = "normal",
    BOLD = "bold",
}